--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "jquery": "^3.3.1",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
+    "qwest": "^4.5.0",
     "react": "^16.3.2",
     "react-animated-css": "^1.0.4",
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
+    "react-infinite-scroller": "^1.1.4",
     "react-parallax": "^1.7.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
