--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-animated-css": "^1.0.4",
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
+    "react-infinite-scroll-component": "^4.1.0",
     "react-infinite-scroller": "^1.1.4",
+    "react-live-clock": "^2.0.3",
     "react-parallax": "^1.7.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
