--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "animate.css": "^3.6.1",
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
     "qwest": "^4.5.0",
